src/core/Claroline/PluginBundle/Tests/stub/plugin/Invalid/UnloadableBundleClass_3/InvalidUnloadableBundleClass_3.php
<?php

namespace Invalid\UnexpectedNamespace;

use Claroline\PluginBundle\AbstractType\ClarolinePlugin;

class InvalidUnloadableBundleClass_3
{
    /*
     * Unloadable because the bundle namespace doesn't
     * match the bundle directory
     */
}